--- a/AHQ/Base.lproj/Main.storyboard
+++ b/AHQ/Base.lproj/Main.storyboard
@@ -275,21 +275,6 @@
             </objects>
             <point key="canvasLocation" x="3308" y="233.49753694581281"/>
         </scene>
-        <!--Unity View Controller-->
-        <scene sceneID="hd4-27-uZ2">
-            <objects>
-                <viewController storyboardIdentifier="UnityViewController" id="f28-bb-xEZ" customClass="UnityViewController" customModule="AHQ" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="673-Yx-95Z">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="mzi-7i-IxV"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bmi-EB-DBU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2753" y="1799"/>
-        </scene>
         <!--Home-->
         <scene sceneID="3zA-xT-Tev">
             <objects>
@@ -328,10 +313,10 @@
             </objects>
             <point key="canvasLocation" x="621.60000000000002" y="894.82758620689663"/>
         </scene>
-        <!--Lab View Controller-->
+        <!--Unity View Controller-->
         <scene sceneID="bS7-yf-dmO">
             <objects>
-                <viewController id="hpQ-me-ISd" customClass="LabViewController" customModule="AHQ" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hpQ-me-ISd" customClass="UnityViewController" customModule="AHQ" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BIh-QR-541">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
